[package]
name = "rai-toolkit"
version = "0.1.0"
authors = ["ingalls <nick@ingalls.ca>"]
edition = "2018"

[dependencies]
geo = "0.13.0"
clap-v3 = { version = "3.0.0-beta.1", features = ["yaml"] }
serde_json = "1.0"
postgis = "0.7.0"

[dependencies.postgres]
version = "0.17.2"
features = [ "with-serde_json-1" ]

[dependencies.geojson]
version = "0.18.0"
features = [ "geo-types" ]
