[package]
name = "rai-toolkit"
version = "0.1.0"
authors = ["ingalls <nick@ingalls.ca>"]
edition = "2018"

[dependencies]
regex = "1.1"
fancy-regex = "0.1"
memchr = "2.0.2"
geocoder-abbreviations = "4.2.0"
unicode-segmentation = "1.3.0"
lazy_static = "1.3.0"
futures = "0.1.29"
actix-threadpool = "0.1.2"
actix-web = "1.0.8"
actix-files = "0.1.7"
actix-http = "0.2.11"
actix-service = "0.4.2"
rayon = "1.3"
indicatif = "0.14"
geo = "0.13.0"
r2d2 = "0.8"
r2d2_postgres = "0.16"
clap-v3 = { version = "3.0.0-beta.1", features = ["yaml"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
postgis = "0.7.0"

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "json"]

[dependencies.postgres]
version = "0.17.2"
features = [ "with-serde_json-1" ]

[dependencies.geojson]
version = "0.18.0"
features = [ "geo-types" ]
